Update project docs and policy/content files

--- a/pages/terms.html
+++ b/pages/terms.html
@@ -96,7 +96,7 @@
 <div class="bg-white dark:bg-brand-cardDark rounded-2xl shadow-sm border border-slate-100 dark:border-slate-700 p-8 sm:p-12" id="policy-content">
 <div class="text-center mb-12">
 <h1 class="text-3xl sm:text-4xl font-extrabold text-slate-900 dark:text-white tracking-tight mb-4" id="terms-title">이용약관</h1>
-<p class="text-slate-500 dark:text-slate-300"><span id="last-updated-label">최종 수정일</span>: 2026-02-09</p>
+<p class="text-slate-500 dark:text-slate-300"><span id="last-updated-label">최종 수정일</span>: 2026-02-15</p>
 </div>
 <div class="space-y-8 text-slate-600 dark:text-slate-300">
 <p class="leading-relaxed text-sm sm:text-base" id="terms-intro">본 이용약관은 메뉴 추천 서비스(이하 "본 서비스")의 이용 조건을 규정합니다. 본 서비스를 이용함으로써 이 약관에 동의하는 것으로 간주됩니다.</p>
@@ -163,8 +163,13 @@
 </section>
 
 <section>
-<h2 class="text-xl font-bold text-slate-900 dark:text-white mb-4 pb-2 border-b border-slate-100 dark:border-slate-700" id="t10-title">제10조 (준거법 및 관할)</h2>
-<p class="leading-relaxed text-sm sm:text-base" id="t10-desc">본 약관의 해석 및 분쟁에 관하여는 대한민국 법령을 적용합니다.</p>
+<h2 class="text-xl font-bold text-slate-900 dark:text-white mb-4 pb-2 border-b border-slate-100 dark:border-slate-700" id="t10-title">제10조 (Merchant of Record 준수)</h2>
+<p class="leading-relaxed text-sm sm:text-base" id="t10-desc">본 서비스가 유료 기능 또는 결제를 도입하는 경우, Polar Merchant of Record 정책에 따라 허용된 디지털 상품/소프트웨어 범위 내에서만 운영합니다. 물리적 상품, 오프라인·인력 제공 서비스, 불법 또는 고위험 카테고리(예: 성인·도박·무기·불법 약물 등) 관련 거래/제휴 요청은 접수 또는 진행하지 않으며, 관련 요청은 사전 고지 없이 거절 또는 중단될 수 있습니다.</p>
+</section>
+
+<section>
+<h2 class="text-xl font-bold text-slate-900 dark:text-white mb-4 pb-2 border-b border-slate-100 dark:border-slate-700" id="t11-title">제11조 (준거법 및 관할)</h2>
+<p class="leading-relaxed text-sm sm:text-base" id="t11-desc">본 약관의 해석 및 분쟁에 관하여는 대한민국 법령을 적용합니다.</p>
 </section>
 </div>
 
