--- a/pages/payment.html
+++ b/pages/payment.html
@@ -109,6 +109,11 @@
           버튼을 누르면 결제 세션을 생성한 뒤 체크아웃으로 이동합니다.
         </p>
       </div>
+
+      <div id="payment-result-panel" class="mt-6 hidden rounded-2xl border border-slate-200 dark:border-indigo-700 bg-white dark:bg-indigo-950/50 p-5 sm:p-6">
+        <h2 class="text-lg font-bold text-slate-900 dark:text-white mb-2">결제 결과</h2>
+        <p id="payment-result-text" class="text-sm text-slate-600 dark:text-slate-300">결제 상태를 확인 중입니다...</p>
+      </div>
     </div>
   </section>
 </main>
