--- a/index.html
+++ b/index.html
@@ -1527,8 +1527,10 @@
                     <div class="w-full max-w-md rounded-2xl border border-slate-200 bg-white p-6 shadow-2xl dark:border-indigo-700 dark:bg-indigo-950">
                         <div class="flex items-start justify-between gap-3">
                             <div>
-                                <p class="text-sm font-semibold text-slate-500 dark:text-slate-300">결제 결과</p>
+                                <span id="payment-result-badge" class="inline-flex items-center rounded-full bg-slate-100 px-2.5 py-1 text-xs font-semibold text-slate-700 dark:bg-slate-800 dark:text-slate-200">안내</span>
+                                <p id="payment-result-title" class="mt-2 text-base font-bold text-slate-800 dark:text-slate-100">결제 결과를 확인하고 있습니다</p>
                                 <p id="payment-result-text" class="mt-2 text-sm text-slate-700 dark:text-slate-200">결제 상태를 확인 중입니다...</p>
+                                <p id="payment-result-meta" class="mt-2 text-xs text-slate-500 dark:text-slate-400"></p>
                             </div>
                             <button class="inline-flex h-8 w-8 items-center justify-center rounded-lg border border-slate-200 text-slate-500 hover:bg-slate-50 dark:border-indigo-700 dark:text-slate-300 dark:hover:bg-indigo-900/60" onclick="document.getElementById('payment-result-panel').classList.add('hidden')" aria-label="팝업 닫기" type="button">
                                 <span class="material-icons-outlined" style="font-size:18px">close</span>
@@ -1542,7 +1544,7 @@
     <script defer src="js/countryLanguageService.js?v=20260214b"></script>
     <script defer src="js/translations.js?v=20260214b"></script>
     <script defer src="js/footer-loader.js?v=20260214b"></script>
-    <script defer src="js/polar-worker-checkout.js?v=20260215c"></script>
+    <script defer src="js/polar-worker-checkout.js?v=20260216c"></script>
     <script defer src="js/app.js?v=20260214b"></script>
     <script>
         // Mobile language panel
