feat: add refund policy and strengthen legal pages for polar

--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -97,7 +97,7 @@
 Legal
 </div>
 <h1 class="text-3xl md:text-4xl font-extrabold text-slate-900 dark:text-white mb-4" id="privacy-title">개인정보처리방침</h1>
-<p class="text-slate-500 dark:text-slate-300"><span id="last-updated-label">최종 수정일</span>: 2026-02-09</p>
+<p class="text-slate-500 dark:text-slate-300"><span id="last-updated-label">최종 수정일</span>: 2026-02-16</p>
 </header>
 
 <div class="max-w-none">
@@ -108,6 +108,7 @@ Legal
 <ul class="list-disc pl-5 space-y-2 text-slate-600 dark:text-slate-300 mb-6">
 <li id="s1-item1"><strong>제휴 문의 시:</strong> 이메일 주소, 문의 내용</li>
 <li id="s1-item2"><strong>자동 수집 정보:</strong> 접속 기록, 쿠키, 접속 IP 정보, 브라우저 종류</li>
+<li id="s1-item3"><strong>결제 관련 정보:</strong> Polar를 통해 전달되는 결제 이메일, 주문/체크아웃 식별자, 결제 및 환불 상태</li>
 </ul>
 
 <h2 class="text-xl font-bold text-slate-900 dark:text-white mt-8 mb-4" id="s2-title">2. 개인정보의 수집 목적</h2>
@@ -116,6 +117,7 @@ Legal
 <li id="s2-item1">제휴 및 광고 문의에 대한 답변</li>
 <li id="s2-item2">서비스 개선 및 통계 분석</li>
 <li id="s2-item3">맞춤형 서비스 제공</li>
+<li id="s2-item4">결제 처리, 주문 확인, 부정 이용 방지, 구매한 디지털 결과물 전달</li>
 </ul>
 
 <h2 class="text-xl font-bold text-slate-900 dark:text-white mt-8 mb-4" id="s3-title">3. 개인정보의 보유 및 이용 기간</h2>
@@ -148,6 +150,14 @@ Legal
 
 <h2 class="text-xl font-bold text-slate-900 dark:text-white mt-8 mb-4" id="s9-title">9. 개인정보처리방침의 변경</h2>
 <p class="text-slate-600 dark:text-slate-300 leading-8" id="s9-desc">본 개인정보처리방침은 법령 또는 서비스 변경에 따라 수정될 수 있습니다. 변경 시 웹사이트를 통해 공지합니다.</p>
+
+<h2 class="text-xl font-bold text-slate-900 dark:text-white mt-8 mb-4" id="s10-title">10. 결제 처리 및 외부 처리자</h2>
+<p class="text-slate-600 dark:text-slate-300 leading-8 mb-4" id="s10-desc">유료 결제는 Polar(Merchant of Record)를 통해 처리됩니다. 본 서비스는 결제, 부정거래 방지, 결과물 전달 및 법적 준수를 위해 필요한 범위에서 주문/결제 관련 정보를 신뢰 가능한 외부 처리자와 공유·처리할 수 있습니다.</p>
+<ul class="list-disc pl-5 space-y-2 text-slate-600 dark:text-slate-300">
+<li id="s10-item1">결제 처리자: Polar</li>
+<li id="s10-item2">이메일 전송 처리자: Resend</li>
+<li id="s10-item3">인프라/보안 및 분석·광고 처리자: Cloudflare 및 관련 파트너</li>
+</ul>
 </div>
 
 <div class="mt-12 pt-8 border-t border-slate-100 dark:border-slate-700 flex justify-center">
