--- a/pages/footer.html
+++ b/pages/footer.html
@@ -35,6 +35,7 @@
         <ul class="space-y-4 text-sm text-slate-500 dark:text-slate-300">
           <li><a class="hover:text-brand-purple transition-colors" href="/pages/privacy.html" id="privacy-link">개인정보처리방침</a></li>
           <li><a class="hover:text-brand-purple transition-colors" href="/pages/terms.html" id="terms-link">이용약관</a></li>
+          <li><a id="refund-link" class="hover:text-brand-purple transition-colors" href="/pages/refund.html">환불 정책</a></li>
           <li><a id="footer-cookies-link" class="hover:text-brand-purple transition-colors" href="/pages/cookies.html">쿠키 정책</a></li>
         </ul>
       </div>
