--- a/pages/terms.html
+++ b/pages/terms.html
@@ -96,7 +96,7 @@
 <div class="bg-white dark:bg-brand-cardDark rounded-2xl shadow-sm border border-slate-100 dark:border-slate-700 p-8 sm:p-12" id="policy-content">
 <div class="text-center mb-12">
 <h1 class="text-3xl sm:text-4xl font-extrabold text-slate-900 dark:text-white tracking-tight mb-4" id="terms-title">이용약관</h1>
-<p class="text-slate-500 dark:text-slate-300"><span id="last-updated-label">최종 수정일</span>: 2026-02-15</p>
+<p class="text-slate-500 dark:text-slate-300"><span id="last-updated-label">최종 수정일</span>: 2026-02-16</p>
 </div>
 <div class="space-y-8 text-slate-600 dark:text-slate-300">
 <p class="leading-relaxed text-sm sm:text-base" id="terms-intro">본 이용약관은 메뉴 추천 서비스(이하 "본 서비스")의 이용 조건을 규정합니다. 본 서비스를 이용함으로써 이 약관에 동의하는 것으로 간주됩니다.</p>
@@ -170,6 +170,11 @@
 <section>
 <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-4 pb-2 border-b border-slate-100 dark:border-slate-700" id="t11-title">제11조 (준거법 및 관할)</h2>
 <p class="leading-relaxed text-sm sm:text-base" id="t11-desc">본 약관의 해석 및 분쟁에 관하여는 대한민국 법령을 적용합니다.</p>
+</section>
+
+<section>
+<h2 class="text-xl font-bold text-slate-900 dark:text-white mb-4 pb-2 border-b border-slate-100 dark:border-slate-700" id="t12-title">제12조 (결제, 전달 및 환불)</h2>
+<p class="leading-relaxed text-sm sm:text-base" id="t12-desc">유료 결제는 Polar Checkout을 통해 처리되며, 결제 완료 후 디지털 결과물은 결제 시 입력한 이메일 주소로 전송됩니다. 환불 가능/불가 기준, 요청 기간 및 처리 절차는 별도 환불 정책(`/pages/refund.html`)을 따르며, Polar Merchant of Record 정책 및 관련 법령이 우선 적용될 수 있습니다.</p>
 </section>
 </div>
 
