--- a/pages/contact.html
+++ b/pages/contact.html
@@ -137,8 +137,8 @@
             </p>
           </div>
           <div class="mb-6">
-            <a class="w-full inline-flex items-center justify-center gap-2 py-3 px-5 bg-gradient-to-r from-brand-purple to-brand-pink text-white font-bold rounded-xl shadow-lg shadow-purple-200 hover:shadow-xl hover:shadow-purple-300 hover:-translate-y-0.5 transition-all duration-200" href="/pages/payment.html">
-              결제 화면으로 이동
+            <a class="w-full inline-flex items-center justify-center gap-2 py-3 px-5 bg-gradient-to-r from-brand-purple to-brand-pink text-white font-bold rounded-xl shadow-lg shadow-purple-200 hover:shadow-xl hover:shadow-purple-300 hover:-translate-y-0.5 transition-all duration-200" href="/pages/report-intake.html">
+              프리미엄 리포트 결제하기
               <span class="material-symbols-outlined text-lg">arrow_forward</span>
             </a>
           </div>
