--- a/pages/payment.html
+++ b/pages/payment.html
@@ -70,9 +70,9 @@
 <body class="bg-brand-light dark:bg-brand-dark font-sans text-slate-800 dark:text-slate-100 antialiased min-h-screen flex flex-col transition-colors duration-300">
 <header class="sticky top-0 z-50 bg-white/80 dark:bg-indigo-950/70 backdrop-blur-md border-b border-slate-100 dark:border-indigo-900">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-    <a class="flex items-center gap-2 text-slate-600 dark:text-slate-300 hover:text-brand-purple transition-colors font-medium group" href="/pages/contact.html">
+    <a class="flex items-center gap-2 text-slate-600 dark:text-slate-300 hover:text-brand-purple transition-colors font-medium group" href="/pages/report-intake.html">
       <span class="material-symbols-outlined text-xl group-hover:-translate-x-1 transition-transform">arrow_back</span>
-      <span>제휴 문의로 돌아가기</span>
+      <span>입력 페이지로 돌아가기</span>
     </a>
     <div class="flex items-center gap-2">
       <div class="w-8 h-8 bg-gradient-to-br from-brand-purple to-brand-pink rounded-lg flex items-center justify-center text-white shadow-md shadow-purple-200">
@@ -92,10 +92,10 @@
       </div>
 
       <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-slate-900 dark:text-white mb-3">
-        Polar 결제 화면
+        결제 전 입력정보 확인
       </h1>
       <p class="text-slate-600 dark:text-slate-300 leading-relaxed mb-8">
-        아래 버튼을 누르면 Polar 결제 페이지로 이동합니다. 결제 상품 ID는
+        입력하신 개인화 정보를 확인한 뒤 결제를 진행하세요. 결제 상품 ID는
         <code class="px-1.5 py-0.5 rounded bg-slate-100 dark:bg-indigo-950 text-sm">09ed8b9c-c328-4962-a12f-69923155d3c6</code>
         로 고정되어 있습니다.
       </p>
@@ -103,6 +103,20 @@
         <p class="text-sm leading-relaxed text-amber-900 dark:text-amber-200">
           결과 리포트는 Polar 결제 시 입력한 이메일 주소로만 발송됩니다. 이메일 주소 오기재/오타로 인한 미수신은 환불 사유에 해당하지 않습니다.
         </p>
+      </div>
+
+      <div class="mb-6 rounded-2xl border border-slate-200 dark:border-indigo-700 bg-white/70 dark:bg-indigo-950/40 p-5 sm:p-6">
+        <h2 class="text-base sm:text-lg font-bold text-slate-900 dark:text-white mb-4">입력 정보 확인</h2>
+        <p class="text-xs sm:text-sm text-slate-500 dark:text-slate-400 mb-4">
+          아래 정보는 결제 후 생성되는 프리미엄 식단/메뉴 리포트에 반영됩니다.
+        </p>
+        <div id="premium-report-summary" class="space-y-2 text-sm text-slate-700 dark:text-slate-200">
+          <p>입력 정보를 불러오는 중입니다...</p>
+        </div>
+        <a href="/pages/report-intake.html" class="mt-4 inline-flex items-center gap-2 text-sm font-semibold text-brand-purple hover:underline">
+          입력 정보 수정하기
+          <span class="material-symbols-outlined text-base">edit</span>
+        </a>
       </div>
 
       <div class="rounded-2xl border border-slate-200 dark:border-indigo-700 bg-slate-50 dark:bg-indigo-950/50 p-5 sm:p-6">
@@ -116,8 +130,24 @@
       </div>
 
       <div id="payment-result-panel" class="mt-6 hidden rounded-2xl border border-slate-200 dark:border-indigo-700 bg-white dark:bg-indigo-950/50 p-5 sm:p-6">
-        <h2 class="text-lg font-bold text-slate-900 dark:text-white mb-2">결제 결과</h2>
-        <p id="payment-result-text" class="text-sm text-slate-600 dark:text-slate-300">결제 상태를 확인 중입니다...</p>
+        <div class="flex items-start justify-between gap-3">
+          <div>
+            <span id="payment-result-badge" class="inline-flex items-center rounded-full bg-slate-100 px-2.5 py-1 text-xs font-semibold text-slate-700 dark:bg-slate-800 dark:text-slate-200">안내</span>
+            <h2 id="payment-result-title" class="mt-2 text-lg font-bold text-slate-900 dark:text-white">결제 결과를 확인하고 있습니다</h2>
+            <p id="payment-result-text" class="mt-2 text-sm text-slate-600 dark:text-slate-300">결제 상태를 확인 중입니다...</p>
+            <p id="payment-result-meta" class="mt-2 text-xs text-slate-500 dark:text-slate-400"></p>
+          </div>
+        </div>
+        <div class="mt-4 flex items-center gap-2">
+          <button id="payment-result-share-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
+            <span class="material-symbols-outlined text-base">share</span>
+            공유하기
+          </button>
+          <button id="payment-result-save-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
+            <span class="material-symbols-outlined text-base">download</span>
+            저장하기
+          </button>
+        </div>
       </div>
     </div>
   </section>
@@ -125,6 +155,6 @@
 
 <div id="site-footer" data-footer-current="contact"></div>
 <script src="/js/footer-loader.js"></script>
-<script defer src="/js/polar-worker-checkout.js?v=20260216c"></script>
+<script defer src="/js/polar-worker-checkout.js?v=20260216e"></script>
 </body>
 </html>
