--- a/pages/contact.html
+++ b/pages/contact.html
@@ -137,10 +137,13 @@
             </p>
           </div>
           <div class="mb-6">
-            <a class="w-full inline-flex items-center justify-center gap-2 py-3 px-5 bg-gradient-to-r from-brand-purple to-brand-pink text-white font-bold rounded-xl shadow-lg shadow-purple-200 hover:shadow-xl hover:shadow-purple-300 hover:-translate-y-0.5 transition-all duration-200" href="/pages/report-intake.html">
+            <button id="contact-polar-pay-button" class="w-full inline-flex items-center justify-center gap-2 py-3 px-5 bg-gradient-to-r from-brand-purple to-brand-pink text-white font-bold rounded-xl shadow-lg shadow-purple-200 hover:shadow-xl hover:shadow-purple-300 hover:-translate-y-0.5 transition-all duration-200" type="button">
               프리미엄 리포트 결제하기
               <span class="material-symbols-outlined text-lg">arrow_forward</span>
-            </a>
+            </button>
+            <p id="contact-polar-pay-status" class="mt-3 text-xs text-slate-500 dark:text-slate-400" aria-live="polite">
+              버튼을 누르면 결제 세션을 생성한 뒤 Polar 결제 페이지로 이동합니다.
+            </p>
           </div>
           <form class="space-y-6" action="https://formspree.io/f/xojlpazr" method="POST" aria-label="제휴 문의 양식">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -257,5 +260,6 @@
 </main>
 <div id="site-footer" data-footer-current="contact"></div>
 <script src="/js/footer-loader.js"></script>
+<script defer src="/js/contact-polar-checkout.js?v=20260216a"></script>
 </body>
 </html>
