feat: add sidebar planner entry and report intake policy notice

--- a/index.html
+++ b/index.html
@@ -342,6 +342,10 @@
                     <span class="material-icons-outlined text-[20px]">help_outline</span>
                     <span class="sidebar-text whitespace-nowrap text-sm font-medium" id="sidebar-faq">자주 묻는 질문</span>
                 </a>
+                <a class="sidebar-nav-item flex items-center gap-3 px-3 py-2.5 rounded-xl sidebar-link group w-full text-left transition-colors" href="/pages/report-intake.html" id="nav-planner" title="식단 짜기">
+                    <span class="material-icons-outlined text-[20px]">restaurant_menu</span>
+                    <span class="sidebar-text whitespace-nowrap text-sm font-medium" id="sidebar-planner">식단 짜기</span>
+                </a>
                 <a class="sidebar-nav-item flex items-center gap-3 px-3 py-2.5 rounded-xl sidebar-link group w-full text-left transition-colors" href="/pages/contact.html" id="nav-contact" title="제휴 문의">
                     <span class="material-icons-outlined text-[20px]">mail</span>
                     <span class="sidebar-text whitespace-nowrap text-sm font-medium" id="sidebar-contact">제휴 문의</span>
@@ -442,6 +446,10 @@
                     <a class="flex items-center space-x-3 px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-xl transition-colors" href="#faq-title" onclick="document.getElementById('mobile-sidebar').style.display='none'">
                         <span class="material-icons-outlined">help_outline</span>
                         <span id="mobile-sidebar-faq">자주 묻는 질문</span>
+                    </a>
+                    <a class="mobile-nav-btn flex items-center space-x-3 w-full px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-xl transition-colors text-left" href="/pages/report-intake.html" onclick="document.getElementById('mobile-sidebar').style.display='none';">
+                        <span class="material-icons-outlined">restaurant_menu</span>
+                        <span id="mobile-sidebar-planner">식단 짜기</span>
                     </a>
                     <a class="mobile-nav-btn flex items-center space-x-3 w-full px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-xl transition-colors text-left" href="/pages/contact.html" onclick="document.getElementById('mobile-sidebar').style.display='none';">
                         <span class="material-icons-outlined">mail</span>
