--- a/pages/report-intake.html
+++ b/pages/report-intake.html
@@ -65,9 +65,9 @@
 <body class="bg-brand-light dark:bg-brand-dark font-sans text-slate-800 dark:text-slate-100 antialiased min-h-screen flex flex-col transition-colors duration-300">
 <header class="sticky top-0 z-50 bg-white/80 dark:bg-indigo-950/70 backdrop-blur-md border-b border-slate-100 dark:border-indigo-900">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-    <a class="flex items-center gap-2 text-slate-600 dark:text-slate-300 hover:text-brand-purple transition-colors font-medium group" href="/pages/contact.html">
+    <a class="flex items-center gap-2 text-slate-600 dark:text-slate-300 hover:text-brand-purple transition-colors font-medium group" href="/index.html">
       <span class="material-symbols-outlined text-xl group-hover:-translate-x-1 transition-transform">arrow_back</span>
-      <span>제휴 문의로 돌아가기</span>
+      <span>메인으로 돌아가기</span>
     </a>
     <div class="flex items-center gap-2">
       <div class="w-8 h-8 bg-gradient-to-br from-brand-purple to-brand-pink rounded-lg flex items-center justify-center text-white shadow-md shadow-purple-200">
@@ -90,6 +90,15 @@
       <p class="text-slate-600 dark:text-slate-300 leading-relaxed mb-8">
         입력 완료 후 결제 단계로 이동합니다. 결제 완료 뒤 이 정보가 프리미엄 리포트 생성에 반영됩니다.
       </p>
+      <div class="mb-6 rounded-2xl border border-amber-300 bg-amber-50/80 dark:bg-amber-900/20 dark:border-amber-700 p-4">
+        <p class="text-sm text-amber-900 dark:text-amber-200 leading-relaxed">
+          본 사이트는 결제 도입 시 Polar Merchant of Record 허용 범위(디지털 상품/소프트웨어) 내에서만 운영합니다.
+          물리적 상품, 오프라인·인력 제공 서비스, 불법 또는 고위험 카테고리(예: 성인·도박·무기·불법 약물 등) 관련 제휴/거래 요청은 접수되지 않습니다.
+          자세한 기준은
+          <a class="underline font-semibold" href="https://polar.sh/docs/merchant-of-record/acceptable-use" rel="noopener noreferrer" target="_blank">Polar Acceptable Use Policy</a>
+          를 확인해 주세요.
+        </p>
+      </div>
 
       <form id="report-intake-form" class="space-y-4">
         <div>
