--- a/pages/payment.html
+++ b/pages/payment.html
@@ -148,6 +148,24 @@
             저장하기
           </button>
         </div>
+        <div id="report-delivery-panel" class="mt-4 hidden rounded-xl border border-sky-200 bg-sky-50/70 dark:border-sky-800 dark:bg-sky-900/20 p-4">
+          <p id="report-progress-text" class="text-sm font-semibold text-sky-900 dark:text-sky-200">리포트 생성 상태를 준비 중입니다.</p>
+          <div class="mt-2 h-2 w-full rounded-full bg-sky-100 dark:bg-sky-950/60 overflow-hidden">
+            <div id="report-progress-bar" class="h-full w-1/3 bg-gradient-to-r from-sky-500 to-indigo-500 transition-all duration-500"></div>
+          </div>
+          <p id="report-email-hint" class="mt-2 text-xs text-sky-900/90 dark:text-sky-200/90"></p>
+          <p id="report-order-hint" class="mt-1 text-xs text-sky-900/90 dark:text-sky-200/90"></p>
+
+          <div id="report-preview-box" class="mt-3 rounded-lg border border-sky-200 bg-white/80 dark:border-sky-900 dark:bg-slate-950/40 p-3 text-xs leading-relaxed text-slate-700 dark:text-slate-200"></div>
+
+          <div class="mt-3 flex items-center gap-2">
+            <button id="report-resend-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 disabled:opacity-60 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
+              <span class="material-symbols-outlined text-base">mail</span>
+              리포트 재전송
+            </button>
+            <p id="report-resend-status" class="text-xs text-slate-500 dark:text-slate-400" aria-live="polite"></p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -155,6 +173,6 @@
 
 <div id="site-footer" data-footer-current="contact"></div>
 <script src="/js/footer-loader.js"></script>
-<script defer src="/js/polar-worker-checkout.js?v=20260216e"></script>
+<script defer src="/js/polar-worker-checkout.js?v=20260216f"></script>
 </body>
 </html>
