feat: add dedicated post-payment report result page

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -173,6 +173,6 @@
 
 <div id="site-footer" data-footer-current="contact"></div>
 <script src="/js/footer-loader.js"></script>
-<script defer src="/js/polar-worker-checkout.js?v=20260216f"></script>
+<script defer src="/js/polar-worker-checkout.js?v=20260216h"></script>
 </body>
 </html>
