--- a/pages/report-result.html
+++ b/pages/report-result.html
@@ -118,7 +118,7 @@
         </button>
         <button id="result-resend-btn" type="button" class="inline-flex items-center gap-1 rounded-lg border border-slate-200 bg-white px-3 py-2 text-xs font-semibold text-slate-700 hover:bg-slate-50 disabled:opacity-60 dark:border-indigo-700 dark:bg-indigo-900/50 dark:text-slate-200 dark:hover:bg-indigo-900">
           <span class="material-symbols-outlined text-base">mail</span>
-          리포트 재전송
+          이메일로 보내기
         </button>
       </div>
       <p id="result-action-status" class="mt-2 text-xs text-slate-500 dark:text-slate-400" aria-live="polite"></p>
@@ -128,6 +128,8 @@
 
 <div id="site-footer" data-footer-current="contact"></div>
 <script src="/js/footer-loader.js"></script>
-<script defer src="/js/report-result.js?v=20260216a"></script>
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<script defer src="/js/report-result.js?v=20260217a"></script>
 </body>
 </html>
