feat: improve premium report UX and footer planner integration

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -19,6 +19,7 @@
           <li><a id="footer-home-link" class="hover:text-brand-purple transition-colors" href="/index.html">홈으로</a></li>
           <li><a class="hover:text-brand-purple transition-colors" href="/pages/about.html" id="about-link">브랜드 소개</a></li>
           <li><a class="hover:text-brand-purple transition-colors" href="/pages/guide.html" id="guide-link">이용 가이드</a></li>
+          <li><a id="footer-planner-link" class="hover:text-brand-purple transition-colors" href="/pages/report-intake.html">식단 짜기</a></li>
           <li><a id="footer-slot-link" class="hover:text-brand-purple transition-colors" href="/index.html#slot">슬롯 머신</a></li>
         </ul>
       </div>
@@ -27,6 +28,7 @@
         <ul class="space-y-4 text-sm text-slate-500 dark:text-slate-300">
           <li><a id="footer-help-link" class="hover:text-brand-purple transition-colors" href="/pages/help.html">도움말 센터</a></li>
           <li><a id="footer-contact-link" class="hover:text-brand-purple transition-colors" href="/pages/contact.html">제휴 문의</a></li>
+          <li><a id="footer-account-link" class="hover:text-brand-purple transition-colors" href="/pages/auth.html">회원가입/로그인</a></li>
           <li><a id="footer-faq-link" class="hover:text-brand-purple transition-colors" href="/pages/faq.html">FAQ</a></li>
         </ul>
       </div>
