--- a/pages/report-intake.html
+++ b/pages/report-intake.html
@@ -145,7 +145,7 @@
   </section>
 </main>
 
-<div id="site-footer" data-footer-current="contact"></div>
+<div id="site-footer" data-footer-current="planner"></div>
 <script src="/js/footer-loader.js"></script>
 <script defer src="/js/premium-report-intake.js"></script>
 </body>
