--- a/pages/report-result.html
+++ b/pages/report-result.html
@@ -104,7 +104,7 @@
       </div>
 
       <div id="report-content-box" class="mt-5 rounded-2xl border border-slate-200 dark:border-indigo-700 bg-white/80 dark:bg-indigo-950/40 p-5">
-        <p id="report-content-text" class="text-sm text-slate-600 dark:text-slate-300 leading-relaxed">리포트 내용을 준비 중입니다.</p>
+        <div id="report-content-text" class="text-sm text-slate-600 dark:text-slate-300 leading-relaxed">리포트 내용을 준비 중입니다.</div>
       </div>
 
       <div class="mt-4 flex flex-wrap items-center gap-2">
@@ -126,7 +126,7 @@
   </section>
 </main>
 
-<div id="site-footer" data-footer-current="contact"></div>
+<div id="site-footer" data-footer-current="planner"></div>
 <script src="/js/footer-loader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
