--- a/pages/payment.html
+++ b/pages/payment.html
@@ -171,7 +171,7 @@
   </section>
 </main>
 
-<div id="site-footer" data-footer-current="contact"></div>
+<div id="site-footer" data-footer-current="planner"></div>
 <script src="/js/footer-loader.js"></script>
 <script defer src="/js/polar-worker-checkout.js?v=20260216h"></script>
 </body>
