--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>회원가입 - MenuRec</title>
-<meta name="description" content="MenuRec 회원가입 페이지입니다. 이메일 회원가입 또는 Google 계정 가입을 지원합니다."/>
+<meta name="description" content="MenuRec 회원가입 페이지입니다. 이메일 회원가입을 지원합니다."/>
 <link rel="canonical" href="https://ninanoo.com/pages/signup.html"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
@@ -67,7 +67,6 @@
         <input id="signup-page-password" type="password" autocomplete="new-password" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm" placeholder="비밀번호 (6자 이상)"/>
         <input id="signup-page-password-confirm" type="password" autocomplete="new-password" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm" placeholder="비밀번호 확인"/>
         <button id="signup-page-submit-btn" type="button" class="w-full rounded-xl bg-gradient-to-r from-brand-purple to-brand-pink px-4 py-3 text-sm font-semibold text-white hover:opacity-90 transition-opacity">이메일 회원가입</button>
-        <button id="signup-page-google-btn" type="button" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm font-semibold hover:border-brand-purple hover:text-brand-purple transition-colors">Google로 가입</button>
       </div>
 
       <a href="/pages/auth.html" class="mt-4 block rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-center text-sm font-semibold hover:border-brand-purple hover:text-brand-purple transition-colors">이미 계정이 있어요 (로그인)</a>
