feat: load supabase runtime config via cloudflare worker

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -8,14 +8,13 @@
 <link rel="canonical" href="https://ninanoo.com/pages/signup.html"/>
 <link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
-<meta name="supabase-url" content="https://rtiovpipptydylhxggdw.supabase.co"/>
-<meta name="supabase-anon-key" content="sb_publishable_ocqHzGIAU7JkNAalx-7ynw_CZZa3ZTQ"/>
 <script src="/js/footer-tailwind-safelist.js"></script>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
 <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script defer src="/js/runtime-config.js?v=20260218a"></script>
 <script>
   tailwind.config = {
     darkMode: 'class',
