--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/favicon.svg">
-    <meta name="supabase-url" content="https://rtiovpipptydylhxggdw.supabase.co">
-    <meta name="supabase-anon-key" content="sb_publishable_ocqHzGIAU7JkNAalx-7ynw_CZZa3ZTQ">
 
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1564,6 +1562,7 @@
 
     <script defer src="js/countryLanguageService.js?v=20260214b"></script>
     <script defer src="js/translations.js?v=20260214b"></script>
+    <script defer src="js/runtime-config.js?v=20260218a"></script>
     <script defer src="js/footer-loader.js?v=20260214b"></script>
     <script defer src="js/polar-worker-checkout.js?v=20260216c"></script>
     <script defer src="js/app.js?v=20260214b"></script>
