--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -62,6 +62,13 @@
       <p id="mypage-status" class="mt-3 text-sm text-slate-600 dark:text-slate-300">로그인 상태를 확인 중입니다.</p>
       <p id="mypage-member-id" class="mt-1 text-sm text-slate-500 dark:text-slate-400"></p>
 
+      <div id="mypage-account-info" class="mt-6 hidden rounded-2xl border border-slate-200 dark:border-slate-700 p-4 space-y-2">
+        <h2 class="text-lg font-bold text-slate-900 dark:text-white">내 정보</h2>
+        <p id="mypage-email" class="text-sm text-slate-600 dark:text-slate-300"></p>
+        <p id="mypage-provider" class="text-sm text-slate-600 dark:text-slate-300"></p>
+        <p id="mypage-created-at" class="text-sm text-slate-600 dark:text-slate-300"></p>
+      </div>
+
       <div id="mypage-profile-form" class="mt-6 hidden space-y-3">
         <h2 class="text-lg font-bold text-slate-900 dark:text-white">프로필 설정</h2>
         <select id="mypage-goal" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm">
@@ -80,6 +87,19 @@
         </div>
       </div>
 
+      <div id="mypage-password-reset" class="mt-6 hidden rounded-2xl border border-slate-200 dark:border-slate-700 p-4 space-y-3">
+        <h2 class="text-lg font-bold text-slate-900 dark:text-white">비밀번호 재설정</h2>
+        <p class="text-sm text-slate-600 dark:text-slate-300">현재 로그인한 이메일로 비밀번호 재설정 링크를 발송합니다.</p>
+        <button id="mypage-reset-password-btn" type="button" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm font-semibold hover:border-brand-purple hover:text-brand-purple transition-colors">재설정 메일 보내기</button>
+      </div>
+
+      <div id="mypage-delete-account" class="mt-6 hidden rounded-2xl border border-rose-200 dark:border-rose-800 p-4 space-y-3">
+        <h2 class="text-lg font-bold text-rose-700 dark:text-rose-300">회원 탈퇴</h2>
+        <p class="text-sm text-slate-600 dark:text-slate-300">계정과 저장된 프로필이 삭제됩니다. 되돌릴 수 없습니다.</p>
+        <input id="mypage-delete-confirm" type="text" class="w-full rounded-xl border border-rose-200 dark:border-rose-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm" placeholder="확인을 위해 '회원 탈퇴' 입력"/>
+        <button id="mypage-delete-account-btn" type="button" class="w-full rounded-xl bg-rose-600 px-4 py-3 text-sm font-semibold text-white hover:bg-rose-700 transition-colors">회원 탈퇴</button>
+      </div>
+
       <a id="mypage-login-link" href="/pages/auth.html" class="mt-6 hidden rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-center text-sm font-semibold hover:border-brand-purple hover:text-brand-purple transition-colors">로그인 하러가기</a>
     </div>
   </section>
@@ -87,6 +107,6 @@
 
 <div id="site-footer" data-footer-current="auth"></div>
 <script defer src="/js/footer-loader.js"></script>
-<script defer src="/js/mypage.js?v=20260218a"></script>
+<script defer src="/js/mypage.js?v=20260218b"></script>
 </body>
 </html>
