feat: show sidebar user id and harden account deletion flow

--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
                 <a id="sidebar-auth-link" class="sidebar-nav-item mb-3 flex items-center gap-3 px-3 py-2.5 rounded-xl sidebar-link group w-full text-left transition-colors" href="/pages/auth.html" title="로그인">
                     <span class="material-icons-outlined text-[20px]" id="sidebar-auth-icon">login</span>
                     <span class="sidebar-text whitespace-nowrap text-sm font-medium" id="sidebar-auth-label">로그인</span>
+                    <span id="sidebar-auth-userid" class="sidebar-text hidden truncate text-xs text-gray-500 dark:text-gray-400"></span>
                 </a>
                 <div id="sidebar-controls" class="flex items-center justify-between gap-2">
                     <div class="flex items-center gap-2 w-full">
@@ -477,6 +478,7 @@
                         <a id="mobile-sidebar-auth-link" class="mobile-nav-btn flex items-center space-x-3 w-full px-4 py-3 text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-xl transition-colors text-left" href="/pages/auth.html" onclick="document.getElementById('mobile-sidebar').style.display='none';">
                             <span class="material-icons-outlined" id="mobile-sidebar-auth-icon">login</span>
                             <span id="mobile-sidebar-auth-label">로그인</span>
+                            <span id="mobile-sidebar-auth-userid" class="ml-auto hidden truncate text-xs text-gray-500 dark:text-gray-400"></span>
                         </a>
                     </div>
                     <!-- Controls -->
