--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
 <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script defer src="/js/runtime-config.js?v=20260218c"></script>
+<script defer src="/js/runtime-config.js?v=20260218d"></script>
 <script>
   tailwind.config = {
     darkMode: 'class',
@@ -81,10 +81,7 @@
         <input id="mypage-allergies" type="text" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm" placeholder="알레르기(쉼표 구분)"/>
         <input id="mypage-dislikes" type="text" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm" placeholder="기피 재료(쉼표 구분)"/>
         <input id="mypage-categories" type="text" class="w-full rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm" placeholder="선호 카테고리(쉼표 구분)"/>
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
-          <button id="mypage-save-btn" type="button" class="rounded-xl bg-gradient-to-r from-brand-purple to-brand-pink px-4 py-3 text-sm font-semibold text-white hover:opacity-90 transition-opacity">프로필 저장</button>
-          <button id="mypage-signout-btn" type="button" class="rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 px-4 py-3 text-sm font-semibold hover:border-rose-400 hover:text-rose-500 transition-colors">로그아웃</button>
-        </div>
+        <button id="mypage-save-btn" type="button" class="w-full rounded-xl bg-gradient-to-r from-brand-purple to-brand-pink px-4 py-3 text-sm font-semibold text-white hover:opacity-90 transition-opacity">프로필 저장</button>
       </div>
 
       <div id="mypage-password-reset" class="mt-6 hidden rounded-2xl border border-slate-200 dark:border-slate-700 p-4 space-y-3">
@@ -107,6 +104,6 @@
 
 <div id="site-footer" data-footer-current="auth"></div>
 <script defer src="/js/footer-loader.js"></script>
-<script defer src="/js/mypage.js?v=20260218c"></script>
+<script defer src="/js/mypage.js?v=20260218d"></script>
 </body>
 </html>
