feat: add sidebar sign-out action for authenticated users

--- a/index.html
+++ b/index.html
@@ -360,6 +360,10 @@
                     <span class="sidebar-text whitespace-nowrap text-sm font-medium" id="sidebar-auth-label">로그인</span>
                     <span id="sidebar-auth-userid" class="sidebar-text hidden truncate text-xs text-gray-500 dark:text-gray-400"></span>
                 </a>
+                <button id="sidebar-signout-btn" class="sidebar-nav-item mb-3 hidden w-full items-center gap-3 rounded-xl px-3 py-2.5 text-left transition-colors" type="button" title="로그아웃">
+                    <span class="material-icons-outlined text-[20px]">logout</span>
+                    <span class="sidebar-text whitespace-nowrap text-sm font-medium">로그아웃</span>
+                </button>
                 <div id="sidebar-controls" class="flex items-center justify-between gap-2">
                     <div class="flex items-center gap-2 w-full">
                         <div class="language-selector relative flex-1">
@@ -480,6 +484,10 @@
                             <span id="mobile-sidebar-auth-label">로그인</span>
                             <span id="mobile-sidebar-auth-userid" class="ml-auto hidden truncate text-xs text-gray-500 dark:text-gray-400"></span>
                         </a>
+                        <button id="mobile-sidebar-signout-btn" class="mobile-nav-btn mt-2 hidden w-full items-center space-x-3 rounded-xl px-4 py-3 text-left text-gray-600 transition-colors hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700" type="button">
+                            <span class="material-icons-outlined">logout</span>
+                            <span id="mobile-sidebar-signout-label">로그아웃</span>
+                        </button>
                     </div>
                     <!-- Controls -->
                     <div class="p-4 flex items-center justify-between gap-2">
